--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <div class="nav-divider"></div>
   <div class="nav-tab" data-id="ha-sum" onclick="switchSection('ha-sum')">HA – Sum</div>
   <div class="nav-tab" data-id="ha-carry" onclick="switchSection('ha-carry')">HA – Carry</div>
+  <div class="nav-divider"></div>
+  <div class="nav-tab" data-id="fa-sel0" onclick="switchSection('fa-sel0')">FA - Sum</div>
+  <div class="nav-tab" data-id="fa-sel1" onclick="switchSection('fa-sel1')">FA - Carry</div>
 </div>
 
 <div class="section-panel active" id="panel-inverter">
@@ -73,7 +76,7 @@
 <div class="section-panel" id="panel-ha-sum">
 <div class="container">
   <div class="section-title"><h2>Half Adder – Sum</h2></div>
-  <p class="section-subtitle">2x1 MUX ─ Sum = A ⊕ B &nbsp;|&nbsp; S = A</p>
+  <p class="section-subtitle">2x1 MUX ─ Sum = A ⊕ B</p>
 
   <div class="inputs-row">
     <div class="input-group">
@@ -113,7 +116,7 @@
     <text x="402" y="135" class="label-out">SUM</text>
 
     <text x="240" y="265" text-anchor="middle" class="label-dim" style="font-size:10px;fill:#5a6a7a;">
-      Sum = A ⊕ B  |  D0 = B  |  D1 = B'  |  S = A
+      Sum = A ⊕ B  |  D0 = B  |  D1 = B'
     </text>
   </svg>
 
@@ -132,7 +135,7 @@
 <div class="section-panel" id="panel-ha-carry">
 <div class="container">
   <div class="section-title"><h2>Half Adder – Carry</h2></div>
-  <p class="section-subtitle">2x1 MUX ─ Carry = A · B &nbsp;|&nbsp; S = A</p>
+  <p class="section-subtitle">2x1 MUX ─ Carry = A · B</p>
 
   <div class="inputs-row">
     <div class="input-group">
@@ -172,7 +175,7 @@
     <text x="402" y="135" class="label-out">CARRY</text>
 
     <text x="240" y="265" text-anchor="middle" class="label-dim" style="font-size:10px;fill:#5a6a7a;">
-      Carry = A · B  |  D0 = GND  |  D1 = B  |  S = A
+      Carry = A · B  |  D0 = GND  |  D1 = B
     </text>
   </svg>
 
@@ -183,6 +186,174 @@
       <tr id="ha2-tr01"><td>0</td><td>1</td><td>1</td><td>0</td></tr>
       <tr id="ha2-tr10"><td>1</td><td>0</td><td>1</td><td>0</td></tr>
       <tr id="ha2-tr11"><td>1</td><td>1</td><td>0</td><td>1</td></tr>
+    </table>
+  </div>
+</div>
+</div>
+
+<div class="section-panel" id="panel-fa-sel0">
+<div class="container">
+  <div class="section-title"><h2>Full Adder – Sum MUX</h2></div>
+  <p class="section-subtitle">D0 = B ⊕ Cin &nbsp;|&nbsp; D1 = B ⊙ Cin</p>
+
+  <div class="inputs-row">
+    <div class="input-group">
+      <span class="input-label">Select</span>
+      <div class="toggle" id="fa-sum-togA" onclick="faFlip('A')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-sum-badgeA">0</span>
+    </div>
+    <div class="input-group">
+      <span class="input-label">B</span>
+      <div class="toggle" id="fa-sum-togB" onclick="faFlip('B')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-sum-badgeB">0</span>
+    </div>
+    <div class="input-group">
+      <span class="input-label">Cin</span>
+      <div class="toggle" id="fa-sum-togCin" onclick="faFlip('Cin')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-sum-badgeCin">0</span>
+    </div>
+  </div>
+
+  <svg viewBox="0 0 520 280" xmlns="http://www.w3.org/2000/svg">
+
+    <circle id="fa-sum-nodeB" cx="55" cy="100" r="6" class="node-off"/>
+    <text x="36" y="104" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:14px;">B</text>
+
+    <circle id="fa-sum-nodeCin" cx="55" cy="160" r="6" class="node-off"/>
+    <text x="36" y="164" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:14px;">Cin</text>
+
+    <line id="fa-sum-d0-bh" x1="55" y1="100" x2="100" y2="100" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d0-bv" x1="100" y1="99" x2="100" y2="120" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d0-cinh" x1="55" y1="160" x2="100" y2="160" stroke-width="2.2" stroke-dasharray="3,2" class="wire-off"/>
+    <line id="fa-sum-d0-cinv" x1="100" y1="160" x2="100" y2="140" stroke-width="2.2" stroke-dasharray="3,2" class="wire-off"/>
+    <circle id="fa-sum-xorBubble" cx="100" cy="130" r="8" class="not-bubble"/>
+    <text x="113" y="118" text-anchor="middle" class="not-label">XOR</text>
+    <line id="fa-sum-d0-xorh" x1="108" y1="130" x2="140" y2="130" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d0-xorv" x1="140" y1="130" x2="140" y2="108" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d0-toporth" x1="140" y1="108" x2="200" y2="108" stroke-width="2.2" class="wire-off"/>
+
+    <line id="fa-sum-d1-bh" x1="55" y1="100" x2="75" y2="100" stroke-width="1.5" stroke-dasharray="3,2" class="wire-off"/>
+    <line id="fa-sum-d1-bv" x1="75" y1="100" x2="75" y2="175" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d1-cinh" x1="54" y1="180" x2="75" y2="180" stroke-width="1.5" class="wire-off"/>
+    <line id="fa-sum-d1-cinv" x1="55" y1="160" x2="55" y2="180" stroke-width="2.2" class="wire-off"/>
+    <circle id="fa-sum-xnorBubble" cx="75" cy="180" r="8" class="not-bubble"/>
+    <text x="90" y="170" text-anchor="middle" class="not-label">XNOR</text>
+    <line id="fa-sum-d1-xnorh" x1="83" y1="180" x2="140" y2="180" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d1-xnorv" x1="140" y1="180" x2="140" y2="152" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-sum-d1-toporth" x1="140" y1="152" x2="200" y2="152" stroke-width="2.2" class="wire-off"/>
+
+    <path class="mux-body" d="M200,88 L310,108 L310,152 L200,172 Z"/>
+    <text x="208" y="112" class="label-dim">0</text>
+    <text x="208" y="158" class="label-dim">1</text>
+
+    <line id="fa-sum-selDown" x1="255" y1="162" x2="255" y2="230" stroke-width="2" class="wire-sel-off"/>
+    <circle id="fa-sum-nodeA" cx="255" cy="230" r="6" class="node-off"/>
+    <text x="255" y="250" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:13px;">Select</text>
+
+    <line id="fa-sum-outWire" x1="310" y1="130" x2="390" y2="130" stroke-width="2.8" class="wire-off"/>
+    <circle id="fa-sum-outNode" cx="394" cy="130" r="7" class="node-off"/>
+    <text x="412" y="135" class="label-out">SUM</text>
+
+    <text x="260" y="275" text-anchor="middle" class="label-dim" style="font-size:10px;fill:#5a6a7a;">
+      Sum = Select ? (B ⊙ Cin) : (B ⊕ Cin)  |  D0 = B ⊕ Cin  |  D1 = B ⊙ Cin
+    </text>
+  </svg>
+
+  <div class="truth-table">
+    <table>
+      <tr><th>A</th><th>B</th><th>Cin</th><th>Sum</th><th>Cout</th></tr>
+      <tr id="fa-tr000"><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr id="fa-tr001"><td>0</td><td>0</td><td>1</td><td>1</td><td>0</td></tr>
+      <tr id="fa-tr010"><td>0</td><td>1</td><td>0</td><td>1</td><td>0</td></tr>
+      <tr id="fa-tr011"><td>0</td><td>1</td><td>1</td><td>0</td><td>1</td></tr>
+      <tr id="fa-tr100"><td>1</td><td>0</td><td>0</td><td>1</td><td>0</td></tr>
+      <tr id="fa-tr101"><td>1</td><td>0</td><td>1</td><td>0</td><td>1</td></tr>
+      <tr id="fa-tr110"><td>1</td><td>1</td><td>0</td><td>0</td><td>1</td></tr>
+      <tr id="fa-tr111"><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td></tr>
+    </table>
+  </div>
+</div>
+</div>
+
+<div class="section-panel" id="panel-fa-sel1">
+<div class="container">
+  <div class="section-title"><h2>Full Adder – Carry MUX</h2></div>
+  <p class="section-subtitle">D0 = B · Cin &nbsp;|&nbsp; D1 = B + Cin</p>
+
+  <div class="inputs-row">
+    <div class="input-group">
+      <span class="input-label">A</span>
+      <div class="toggle" id="fa-carry-togA" onclick="faFlip('A')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-carry-badgeA">0</span>
+    </div>
+    <div class="input-group">
+      <span class="input-label">B</span>
+      <div class="toggle" id="fa-carry-togB" onclick="faFlip('B')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-carry-badgeB">0</span>
+    </div>
+    <div class="input-group">
+      <span class="input-label">Cin</span>
+      <div class="toggle" id="fa-carry-togCin" onclick="faFlip('Cin')"><div class="knob"></div></div>
+      <span class="val-badge" id="fa-carry-badgeCin">0</span>
+    </div>
+  </div>
+
+  <svg viewBox="0 0 520 280" xmlns="http://www.w3.org/2000/svg">
+
+    <circle id="fa-carry-nodeB" cx="55" cy="100" r="6" class="node-off"/>
+    <text x="36" y="104" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:14px;">B</text>
+
+    <circle id="fa-carry-nodeCin" cx="55" cy="160" r="6" class="node-off"/>
+    <text x="36" y="164" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:14px;">Cin</text>
+
+    <line id="fa-carry-d0-bh" x1="50" y1="100" x2="100" y2="100" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d0-bv" x1="100" y1="100" x2="100" y2="120" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d0-cinh" x1="50" y1="160" x2="100" y2="160" stroke-width="2.2" stroke-dasharray="3,2" class="wire-off"/>
+    <line id="fa-carry-d0-cinv" x1="100" y1="160" x2="100" y2="140" stroke-width="2.2" stroke-dasharray="3,2" class="wire-off"/>
+    <circle id="fa-carry-andBubble" cx="100" cy="130" r="8" class="not-bubble"/>
+    <text x="113" y="118" text-anchor="middle" class="not-label">AND</text>
+    <line id="fa-carry-d0-andh" x1="108" y1="130" x2="140" y2="130" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d0-andv" x1="140" y1="130" x2="140" y2="108" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d0-toporth" x1="140" y1="108" x2="200" y2="108" stroke-width="2.2" class="wire-off"/>
+
+    <line id="fa-carry-d1-bh" x1="50" y1="100" x2="75" y2="100" stroke-width="1.5" stroke-dasharray="3,2" class="wire-off"/>
+    <line id="fa-carry-d1-bv" x1="75" y1="100" x2="75" y2="175" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d1-cinh" x1="54" y1="180" x2="75" y2="180" stroke-width="1.5" class="wire-off"/>
+    <line id="fa-carry-d1-cinv" x1="55" y1="160" x2="55" y2="180" stroke-width="2.2" class="wire-off"/>
+    <circle id="fa-carry-orBubble" cx="75" cy="180" r="8" class="not-bubble"/>
+    <text x="85" y="170" text-anchor="middle" class="not-label">OR</text>
+    <line id="fa-carry-d1-orh" x1="83" y1="180" x2="140" y2="180" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d1-orv" x1="140" y1="180" x2="140" y2="152" stroke-width="2.2" class="wire-off"/>
+    <line id="fa-carry-d1-toporth" x1="140" y1="152" x2="200" y2="152" stroke-width="2.2" class="wire-off"/>
+
+    <path class="mux-body" d="M200,88 L310,108 L310,152 L200,172 Z"/>
+    <text x="208" y="112" class="label-dim">0</text>
+    <text x="208" y="158" class="label-dim">1</text>
+
+    <line id="fa-carry-selDown" x1="255" y1="162" x2="255" y2="230" stroke-width="2" class="wire-sel-off"/>
+    <circle id="fa-carry-nodeA" cx="255" cy="230" r="6" class="node-off"/>
+    <text x="255" y="250" text-anchor="middle" class="label-bright" style="fill:#7ec8e3;font-size:13px;">Select</text>
+
+    <line id="fa-carry-outWire" x1="310" y1="130" x2="390" y2="130" stroke-width="2.8" class="wire-off"/>
+    <circle id="fa-carry-outNode" cx="394" cy="130" r="7" class="node-off"/>
+    <text x="412" y="135" class="label-out">COUT</text>
+
+    <text x="260" y="275" text-anchor="middle" class="label-dim" style="font-size:10px;fill:#5a6a7a;">
+      Cout = Select ? (B + Cin) : (B · Cin)  |  D0 = B · Cin  |  D1 = B + Cin
+    </text>
+  </svg>
+
+  <div class="truth-table">
+    <table>
+      <tr><th>A</th><th>B</th><th>Cin</th><th>Sum</th><th>Cout</th></tr>
+      <tr id="fa2-tr000"><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr id="fa2-tr001"><td>0</td><td>0</td><td>1</td><td>1</td><td>0</td></tr>
+      <tr id="fa2-tr010"><td>0</td><td>1</td><td>0</td><td>1</td><td>0</td></tr>
+      <tr id="fa2-tr011"><td>0</td><td>1</td><td>1</td><td>0</td><td>1</td></tr>
+      <tr id="fa2-tr100"><td>1</td><td>0</td><td>0</td><td>1</td><td>0</td></tr>
+      <tr id="fa2-tr101"><td>1</td><td>0</td><td>1</td><td>0</td><td>1</td></tr>
+      <tr id="fa2-tr110"><td>1</td><td>1</td><td>0</td><td>0</td><td>1</td></tr>
+      <tr id="fa2-tr111"><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td></tr>
     </table>
   </div>
 </div>
